fixed icon in ribbons gap

--- a/web/stylings/index.css
+++ b/web/stylings/index.css
@@ -52,13 +52,18 @@ nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
+    gap: 15px;
 }
 
 nav li {
     white-space: nowrap;
     display: flex;
     align-items: center;
-    gap: 5px;
+    padding: 0;
+}
+
+nav li .icons {
+    margin-right: -12px;
 }
 
 nav li a {
